testsuite/poke.pkl/printf-diag-14.pk
/* { dg-do compile} */

printf "foo%X", 12; /* { dg-error "invalid format specifier" } */
